fix: update main layout styles for better alignment and responsiveness

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,13 @@
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  max-width: 70%;
+  margin: 0 auto;
+  width: 46rem;
+}
+
 header {
   display: flex;
   justify-content: center;
@@ -13,8 +23,7 @@ header {
   justify-content: center;
   align-items: center;
 
-  max-width: 70%;
-  width: 46rem;
+  width: 100%;
   height: 3.375rem; /* 54px */
   margin-top: -1.6875rem;
   margin: -1.6875rem auto 2rem; /* half height on top */
